fix hero overflow

--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,7 @@ main section:first-child {
     width: 100%;
     height: 440px;
     color: #ffffff;
+    overflow: hidden;
     position: relative;
     border-radius: 8px;
     background-size: cover;
